# switchbot-dashboard

./: Dockerfile  compose.yml  main.py  pyproject.toml
app/: main.py
docker/python/: Dockerfile
