[project]
name = "switchbot-dashboard"
version = "0.1.0"
description = "Dashboard for Switchbot using InfluxDB and Grafana"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "influxdb-client>=1.49.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
    "types-requests>=2.32.4.20250913",
]
